exports[`keyContainer getValue throws error if the key is not supported 1`] = `"The key \"klsdlkjd\" is not supported"`;

exports[`keyContainer init sets cmdKey to 17 when is Mac - Opera 1`] = `
Array [
  Object {
    "code": 16,
    "name": "shift",
  },
  Object {
    "code": 17,
    "name": "ctrl",
  },
  Object {
    "code": 18,
    "name": "alt",
  },
  Object {
    "code": 17,
    "name": "cmd",
  },
]
`;

exports[`keyContainer init sets cmdKey to 91 1`] = `
Array [
  Object {
    "code": 16,
    "name": "shift",
  },
  Object {
    "code": 17,
    "name": "ctrl",
  },
  Object {
    "code": 18,
    "name": "alt",
  },
  Object {
    "code": 91,
    "name": "cmd",
  },
  Object {
    "code": 93,
    "name": "cmd",
  },
]
`;

exports[`keyContainer init sets cmdKey to 91 when Mac but not Opera or Firefox 1`] = `
Array [
  Object {
    "code": 16,
    "name": "shift",
  },
  Object {
    "code": 17,
    "name": "ctrl",
  },
  Object {
    "code": 18,
    "name": "alt",
  },
  Object {
    "code": 91,
    "name": "cmd",
  },
  Object {
    "code": 93,
    "name": "cmd",
  },
]
`;

exports[`keyContainer init sets cmdKey to 224 when is Mac - Firefox 1`] = `
Array [
  Object {
    "code": 16,
    "name": "shift",
  },
  Object {
    "code": 17,
    "name": "ctrl",
  },
  Object {
    "code": 18,
    "name": "alt",
  },
  Object {
    "code": 224,
    "name": "cmd",
  },
]
`;
